# retrieve-merge-predict

./: .gitignore  .pre-commit-config.yaml  Gemfile  LICENSE  README.md  _config.yml  about.markdown  add_depleted.py  analysis_query_results.py  archive_cand.py  build_master_list.py  buildconfig.py  check_exp_content.py  clean_elasticsearch.sh  debug_cv_index.py  debug_hashindex.py  debug_indexes.py  debug_indices.py  debug_joins.py  debug_performance.py  debug_pipeline.py  debug_plotting.py  debug_realmlp.py  debug_reverse_index.py  debug_starmie.py  environment.yaml  example_config.sh  example_datasketch.py  import_from_starmie.py  index.markdown  joinpaths.txt  main.py  main_dataprep.py  main_pipeline.py  main_query_datamart.py  main_slurm.py  manage_lazo.py  metadata.db  metadata_creation.py  minhash_indexing.py  (+33 more)
_layouts/: home.html  page.html
_posts/: 2023-07-05-resources.md
config/: config-big_batch.toml  config-binary-aggr.toml  config-binary.toml  config-clf.toml  config-debug.ini  config-debug.toml  config-depleted.ini  config-full_run.toml  config-new_datasets.toml  config-open_data-aggr.toml  config-open_data-depleted.toml  config-open_data-full.toml  config-open_data.ini  config-open_data.toml  config-repro.ini  config-repro.toml  config-single.ini  config-stepwise.ini  config-wordnet.toml  config-wordnet_full-aggr.toml  config-wordnet_full-swg_iterations.toml  config-wordnet_full-top_k.toml  config-wordnet_full-us_elections_dems.toml  config-wordnet_full.toml  config-wordnet_full_flat-us_county_population.toml  config-wordnet_full_flat.toml  config.ini  config_catboost.ini  debug-full_run.toml  debug-open_data.toml  proto_config.ini  proto_config.toml
documentation/: additional_scripts.md  dataset_info.md  execution.md  installation.md  preparation.md  resources.md  results.md
notebooks/: 2023-09-28-Study candidate runs.ipynb  2023-11-23 Study results movies.ipynb  2023-11-30 Study big run.ipynb  Add all movies datasets.ipynb  Additional plots.ipynb  (+37 more)
(+292 files in other folders)
